# enso

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CPPLINT.cfg  LICENSE.txt  README.md  bsd.py  build_hw_docs.sh  config-doxybook2.json  cycles.py  deterministic.py  dpq.py  expected_res.txt  generate_doc_markdown.sh  handin.tar  ibet.py  index.html  lp.py  meson.build  meson_options.txt  mkdocs.yml  requirements.txt  run_vsim_afs.sh  setup.sh  sitemap.xml  sw_setup.sh  synthesize.sh
docs/: .gitignore  .pages  CNAME  Doxyfile.in  build_docs.sh  compiling_hardware.md  compiling_software.md  counters.md  enso_cli.md  enso_pipe.md  ensogen.md  getting_started.md  index.md  meson.build  requirements.txt  running.md  software_api.md
docs/doxygen/: Doxyfile.in  doxygen_header.html
docs/examples/: .pages  echo.md
docs/hardware/: .pages  counters.md  index.md
docs/hardware/modules/: basic_data_mover.md  configurator.md  dc_back_pressure.md  esram_wrapper.md  flow_director.md  flow_table_wrapper.md  hash_func.md  hyper_pipe.md  hyper_pipe_root.md  hyper_pipe_rst.md  input_comp.md  my_stats.md  parser.md  pdu_gen.md  rate_limiter.md  timestamp.md  top.md
docs/hardware/modules/pcie/: bram_mux.md  cpu_to_fpga.md  fpga_to_cpu.md  jtag_mmio_arbiter.md  pcie_core.md  pcie_top.md  queue_manager.md  rx_dsc_queue_manager.md
docs/primitives/: .pages  device.md  rx_enso_pipe.md  rx_tx_enso_pipe.md  tx_enso_pipe.md
software/: Makefile  annotated.html  annotated_dup.js  app.cpp  app.h  app_event.cpp  app_event_dsc_per_pkt.cpp  capture.cpp  classenso_1_1Device-members.html  classenso_1_1Device.html  classenso_1_1Device.js  classenso_1_1MessageIteratorBase-members.html  classenso_1_1MessageIteratorBase.html  classenso_1_1MessageIteratorBase.js  classenso_1_1PeekPktIterator-members.html  classenso_1_1PeekPktIterator.html  classenso_1_1PeekPktIterator.js  classenso_1_1PktIterator-members.html  classenso_1_1PktIterator.html  classenso_1_1PktIterator.js  classenso_1_1Queue-members.html  classenso_1_1Queue.html  classenso_1_1Queue.js  classenso_1_1QueueConsumer-members.html  classenso_1_1QueueConsumer.html  classenso_1_1QueueConsumer.js  classenso_1_1QueueProducer-members.html  classenso_1_1QueueProducer.html  classenso_1_1QueueProducer.js  classenso_1_1RxPipe-members.html  classenso_1_1RxPipe.html  classenso_1_1RxPipe.js  classenso_1_1RxPipe_1_1MessageBatch-members.html  classenso_1_1RxPipe_1_1MessageBatch.html  classenso_1_1RxPipe_1_1MessageBatch.js  classenso_1_1RxTxPipe-members.html  classenso_1_1RxTxPipe.html  classenso_1_1RxTxPipe.js  classenso_1_1TxPipe-members.html  classenso_1_1TxPipe.html  (+101 more)
software/examples/: app.cpp  app.h  app_copy.cpp  app_event.cpp  app_event_dsc_per_pkt.cpp  app_new.cpp  capture.cpp  config_experiment.cpp  dispatch.cpp  echo.cpp  echo_copy.cpp  echo_event.cpp  echo_event_dsc_per_pkt.cpp  echo_prefetch.cpp  ensogen.cpp  ensogen_burst.cpp  ensogen_new.cpp  ensogen_poisson.cpp  ensogen_poisson_burst.cpp  ensogen_random.cpp  ensogen_switch.cpp  example_helpers.h  l2_forward.cpp  meson.build  new_app.cpp  new_app_copy.cpp  new_capture.cpp  new_echo.cpp  new_echo_copy.cpp  new_echo_event.cpp  notif_experiment.cpp  pktgen.cpp  sched_rx.cpp  sched_tx.cpp  simpleRx.cpp  simpleTx.cpp  yield_experiment.cpp
software/fd/: CMakeLists.txt  Makefile  fd.cpp  fd.h  notes.txt  pcie.cpp  pcie.h  test.cpp
software/fd/api/: Makefile  intel_fpga_pcie_api.hpp
software/fd/api/linux/: CMakeLists.txt  Makefile  intel_fpga_pcie_api_linux.cpp  intel_fpga_pcie_api_linux.hpp
software/fd/kernel/linux/: Makefile  README.md  event_handler.c  event_queue.c  event_queue.h  fd.cpp  intel_fpga_pcie.h  intel_fpga_pcie_chr.c  intel_fpga_pcie_dma.h  intel_fpga_pcie_drv.mod.c  intel_fpga_pcie_ioctl.c  intel_fpga_pcie_ioctl.h  intel_fpga_pcie_setup.c  intel_fpga_pcie_setup.h  mmap_zcopy.c  setup.sh  sock_errors.h  sock_internal.c  sock_internal.h  sock_struct.h  test.c
software/include/: meson.build
software/include/enso/: config.h  consts.h  helpers.h  internals.h  ixy_helpers.h  meson.build  pipe.h  queue.h  shared.h  socket.h
software/include/norman/: config.h  consts.h  dev.h  helpers.h  internals.h  ixy_helpers.h  meson.build  pipe.h  socket.h
software/kernel/: intel_fpga_pcie_ip_params.h
software/kernel/linux/: Makefile  enso.c  enso_chr.c  enso_chr.h  enso_defines.h  enso_heap.c  enso_heap.h  enso_ioctl.c  enso_ioctl.h  enso_setup.c  enso_setup.h  event_handler.c  event_handler.h  event_queue.h  install  intel_fpga_pcie.h  intel_fpga_pcie_chr.c  intel_fpga_pcie_chr.h  intel_fpga_pcie_dma.c  intel_fpga_pcie_dma.h  intel_fpga_pcie_drv.mod.c  intel_fpga_pcie_ioctl.c  intel_fpga_pcie_ioctl.h  intel_fpga_pcie_setup.c  intel_fpga_pcie_setup.h  load  unload
software/kernel/linux/enso/: Makefile  enso.c  install  load  unload
software/norman/: Makefile  meson.build  pcie.cpp  pcie.h  socket.cpp  socket.h  userlib.cpp  userlib.h
software/norman/api/: CMakeLists.txt  intel_fpga_pcie_api.hpp
software/norman/kernel/: intel_fpga_pcie_ip_params.h
software/norman/kernel/linux/: Makefile  (+14 more)
software/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+10 more)
software/src/: meson.build  mock_pcie.cpp  mock_pcie.h  mock_rss_helpers.cpp  mock_rss_helpers.h  pcie.cpp  pcie.h  rss_helpers.cpp
software/src/backends/: meson.build
software/src/enso/: config.cpp  helpers.cpp  ixy_helpers.cpp  meson.build  pipe.cpp  socket.cpp
software/src/norman/: config.cpp  dev.cpp  helpers.cpp  ixy_helpers.cpp  meson.build  pipe.cpp  socket.cpp
software/src/syscall_api/: intel_fpga_pcie_api.hpp  meson.build
software/test/: meson.build  queue_test.cpp
(+405 files in other folders)
